SEGUNDA ENTREGA DEL PROYECTO FINAL

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,30 @@
     <title>Contacto | Canotaje UY</title>
     <link rel="stylesheet" href="../css/styles4.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="grilla">
 
         <!--    Seccion  Titulo   -->
-        
-        
+
+
         <header class="header">
             <div class="Logo">
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
-                    <ul class="Redes">
-                        <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png"
-                                    alt=""></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
-                                    alt="Facebook"></a></li>
-                        <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
-                                    alt="YouTube"></a>
-                        </li>
-                    </ul>
+                <ul class="Redes">
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="../IMG/instagram.png" alt=""></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/"><img class="Icono" src="../IMG/facebook.png"
+                                alt="Facebook"></a></li>
+                    <li><a href="https://www.youtube.com/"><img class="Icono" src="../IMG/youtube.png"
+                                alt="YouTube"></a>
+                    </li>
+                </ul>
             </div>
     </div>
 
@@ -49,7 +50,8 @@
                         <a class="nav-link active" aria-current="page" href="../Pages/Historia.html">Historia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../Pages/Competencias.html">Competencias</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="../Pages/Competencias.html">Competencias</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../Pages/Galeria.html">Galeria</a>
@@ -73,104 +75,108 @@
     </header>
 
 
-<!--    Formulario    -->
+    <!--    Formulario    -->
 
 
 
 
 
-<label for="Usuario"><h3>¿Quien nos contacta?</h3></label>
+    <label for="Usuario">
+        <h3>¿Quien nos contacta?</h3>
+    </label>
 
-<form class="row g-3">
-    <fieldset>
-    <div class="col-md-6">
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-    </div>
+    <form class="row g-3">
+        <fieldset>
+            <div class="col-md-6">
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            </div>
+
+            <br>
+            <textarea class="col-6" name="" id="" placeholder="Haganos saber el motivo de contacto" cols="20"
+                rows="7"></textarea>
+            <br>
+
+            <div class="col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                        Listo
+                    </label>
+                </div>
+            </div>
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
+    </form>
+    </fieldset>
 
     <br>
-    <textarea class="col-6" name="" id="" placeholder="Haganos saber el motivo de contacto" cols="20" rows="7"></textarea>
-    <br>
 
-    <div class="col-12">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
-        <label class="form-check-label" for="gridCheck">
-        Listo
-        </label>
-      </div>
-    </div>
-    <div class="col-12">
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </div>
-  </form>
-</fieldset>
-
-<br>
-
-<!--    Seccion Final   -->
-
-<footer class="footer">
-
-    <section class="menuinferior">
-        <div class="Inicio">
-            <h3>Inicio</h3>
-            <ul>
-                <li><a href="#Novedades">Novedades</a></li>
-                <li><a href="#Proximas Competiciones">Proximas Competiciones</a></li>
-                <li><a href="#Atletas Uruguayos">Atletas Uruguayos</a></li>
-            </ul>
-        </div>
-
-        <div class="Competenciaas">
-            <h3>Competencias</h3>
-
-            <ul>
-                <li><a href="../Pages/Competencias.html">Internacional</a></li>
-                <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
-                <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
-            </ul>
-        </div>
-
-        <div class="Contactoo">
-            <h3>Contacto</h3>
-
-            <ul>
-                <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-                <li><a href="https://www.instagram.com/">Instagram</a></li>
-                <li><a href="https://www.facebook.com/">Facebook</a></li>
-                <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
-            </ul>
-        </div>
-    </section>
     <!--    Seccion Final   -->
 
+    <footer class="footer">
+
+        <section class="menuinferior">
+            <div class="Inicio">
+                <h3>Inicio</h3>
+                <ul>
+                    <li><a href="../index.html">Novedades</a></li>
+                    <li><a href="../index.html">Proximas Competiciones</a></li>
+                    <li><a href="../index.html">Atletas Uruguayos</a></li>
+                </ul>
+            </div>
+
+            <div class="Competenciaas">
+                <h3>Competencias</h3>
+
+                <ul>
+                    <li><a href="../Pages/Competencias.html">Internacional</a></li>
+                    <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
+                    <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
+                </ul>
+            </div>
+
+            <div class="Contactoo">
+                <h3>Contacto</h3>
+
+                <ul>
+                    <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/">Facebook</a></li>
+                    <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
+                </ul>
+            </div>
+        </section>
+        <!--    Seccion Final   -->
 
 
-    <div class="Disponible">
-        <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
-        <span class="AppStore">
-            <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
-        </span>
+
+        <div class="Disponible">
+            <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
+            <span class="AppStore">
+                <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
+            </span>
+        </div>
+
+        <div class="SemiFinal">
+            <a href="../Pages/Política de cookies.html" target="blank">Política de cookies</a>
+            <a href="../Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
+            <a href="../Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
+            <a href="../Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
+        </div>
+
+
+
+        <p>
+            <h4>©Copyright 2050 de nadie. Todos los derechos revertidos.</h4>
+        </p>
+    </footer>
+
     </div>
 
-    <div class="SemiFinal">
-        <a href="../Pages/Política de cookies.html" target="blank">Política de cookies</a>
-        <a href="../Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
-        <a href="../Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
-        <a href="../Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
-    </div>
-
-
-
-    <p>
-        <h4>©Copyright 2050 de nadie. Todos los derechos revertidos.</h4>
-    </p>
-</footer>
-
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
