--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canotaje UY</title>
-    <link rel="stylesheet" href="./css/styles4.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/styles4.css">
 </head>
 
 <body class="layout">
@@ -18,27 +18,25 @@
 
 
         <header class="header">
-            <div class="Logo">
-                <img width="10%" src="./IMG/Logo1.png" alt="LOGO">
+            <div class="Logo ">
+                <img class="img-fluid" width="10%" src="./IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
-                    <ul class="Redes">
-                        <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="./IMG/gorjeo.png" alt=""></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/"><img class="Icono" src="./IMG/instagram.png"
-                                    alt=""></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/"><img class="Icono" src="./IMG/facebook.png"
-                                    alt="Facebook"></a></li>
-                        <li><a href="https://www.youtube.com/"><img class="Icono" src="./IMG/youtube.png"
-                                    alt="YouTube"></a>
-                        </li>
-                    </ul>
+                <ul class="Redes">
+                    <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="./IMG/gorjeo.png" alt=""></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/"><img class="Icono" src="./IMG/instagram.png" alt=""></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/"><img class="Icono" src="./IMG/facebook.png"
+                                alt="Facebook"></a></li>
+                    <li><a href="https://www.youtube.com/"><img class="Icono" src="./IMG/youtube.png" alt="YouTube"></a>
+                    </li>
+                </ul>
             </div>
     </div>
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navegacion navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,116 +68,76 @@
             </div>
         </div>
     </nav>
-
-
     </header>
 
 
 
     <!--    Seccion Novedades   -->
 
-    <main class="main">
+    <main class="contenido">
 
 
 
-        <h2>Novedades</h2>
+        <h2 id="Novedades">Novedades</h2>
         <section class="NovedadesA">
-            <div class="contaier">
-                <div class="row">
-                    <div class="col">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas facilis sapiente,
-                        totam
-                        cupiditate maiores autem sit sint, perferendis in consectetur quidem ducimus est aut non
-                        quam
-                        libero, sequi voluptates distinctio? Perferendis sunt animi quod illo rerum aut itaque
-                        omnis
-                        atque consectetur suscipit? Ipsa suscipit cumque consequatur ducimus ab et iusto
-                        temporibus
-                        accusamus optio! Deserunt praesentium minus totam sapiente, illum dolorem similique
-                        tenetur
-                        aliquid nulla! Facilis nihil autem sit tenetur est neque, quam, quaerat veniam,
-                        aspernatur
-                        adipisci totam velit. Repudiandae autem consectetur error rerum enim vero voluptates
-                        quos,
-                        beatae vel id earum minus quaerat ducimus officia obcaecati corrupti maiores
-                        voluptatibus.
-                        Provident asperiores magni non explicabo quia saepe architecto tempore illum tempora
-                        deserunt
-                        sequi iusto, nam ea odio pariatur eum sit tenetur autem reiciendis expedita ut! Hic
-                        repellendus
-                        reiciendis ab porro quasi ratione facere accusantium obcaecati aliquam! Quod qui
-                        quisquam
-                        eos,
-                        eaque, quia quos doloribus a architecto alias dicta inventore, pariatur sunt totam
-                        beatae
-                        cum
-                        magnam explicabo reiciendis laborum accusantium aliquid. Natus voluptates voluptatum
-                        expedita
-                        necessitatibus fugiat quibusdam molestiae impedit fugit possimus, architecto non dolore
-                        vero
-                        consequuntur sed reiciendis veniam quod deleniti cupiditate unde facilis facere
-                        assumenda
-                        tempora? Quibusdam, corrupti excepturi vero impedit dolor aperiam debitis autem
-                        inventore
-                        vel
-                        officia, cum, eius rem earum? Adipisci iste blanditiis, ex pariatur enim modi! Harum,
-                        eos.
-                        Impedit quia consectetur corporis adipisci dolores atque, eius nostrum, tempore odit ex
-                        sed
-                        sit,
-                        inventore perferendis eveniet reiciendis soluta. A doloremque libero culpa optio odit
-                        dolorem ea
-                        veniam sapiente consectetur! Qui reprehenderit a, velit fugit deserunt error, itaque
-                        adipisci
-                        aut facere aliquid nihil? Reiciendis debitis accusamus quae animi esse maxime
-                        dignissimos
-                        necessitatibus, consequuntur minima neque sapiente eius odit obcaecati fugit molestiae
-                        maiores
-                        eveniet placeat natus numquam fuga, eligendi rerum expedita dolorem. Iste, placeat?
-                        Corporis
-                        minima quisquam sed? Ipsum ea amet iste expedita vero alias ex? At doloribus repellendus
-                        atque
-                        provident, iusto id eligendi eaque quidem voluptatem, corporis recusandae, sint iste
-                        temporibus
-                        hic earum! Dicta tempore iusto ratione ipsum, recusandae veniam praesentium qui adipisci
-                        quae
-                        perferendis nam et? Eius expedita recusandae quo molestiae, quae sint cum et fugit,
-                        numquam
-                        fuga
-                        ad, dolores doloribus dolor distinctio quod id rem mollitia! Ea unde voluptate, ipsum
-                        amet
-                        deleniti animi nihil minima neque perferendis natus vero dolore quia facilis dolorum
-                        officiis
-                        veniam rerum nisi maxime earum dignissimos aperiam veritatis voluptatum? Quos vitae
-                        blanditiis
-                        incidunt, ea eius eos. Non modi, pariatur quas debitis cupiditate officiis aut eum
-                        accusamus
-                        voluptatem repudiandae nam doloribus neque illo et excepturi ab nostrum necessitatibus.
-                        Sit
-                        repudiandae neque harum consequuntur alias, necessitatibus quis blanditiis doloribus
-                        itaque
-                        voluptatum adipisci ut saepe nisi similique. Itaque quaerat, nesciunt placeat architecto
-                        sed
-                        nobis assumenda sit omnis, aut maxime facere iusto necessitatibus similique aspernatur
-                        temporibus quasi, dolores est voluptate ea. Quis exercitationem obcaecati magnam beatae
-                        quibusdam vitae dicta quisquam distinctio commodi amet labore, itaque officiis. Ipsum
-                        animi
-                        voluptate quas laboriosam amet commodi eum asperiores non quidem earum dolore quod sint
-                        facilis
-                        id, rem doloribus expedita magnam! Perferendis veniam nam nisi ipsam dignissimos maxime
-                        amet
-                        quam. Rerum voluptatum eaque sint placeat esse! Tenetur sapiente sint voluptate quis?
-                        </p>
-                    </div>
-                    <div class="col">
-                        <div class="Video">
-                            <iframe width="720" height="480" src="https://www.youtube.com/embed/a5bbZjFt9Bc"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
+            <p class="textoA">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas facilis sapiente,
+                totam
+                cupiditate maiores autem sit sint, perferendis in consectetur quidem ducimus est aut non
+                quam
+                libero, sequi voluptates distinctio? Perferendis sunt animi quod illo rerum aut itaque
+                omnis
+                atque consectetur suscipit? Ipsa suscipit cumque consequatur ducimus ab et iusto
+                temporibus
+                accusamus optio! Deserunt praesentium minus totam sapiente, illum dolorem similique
+                tenetur
+                aliquid nulla! Facilis nihil autem sit tenetur est neque, quam, quaerat veniam,
+                aspernatur
+                adipisci totam velit. Repudiandae autem consectetur error rerum enim vero voluptates
+                quos,
+                beatae vel id earum minus quaerat ducimus officia obcaecati corrupti maiores
+                voluptatibus.
+                Provident asperiores magni non explicabo quia saepe architecto tempore illum tempora
+                deserunt
+                sequi iusto, nam ea odio pariatur eum sit tenetur autem reiciendis expedita ut! Hic
+                repellendus
+                reiciendis ab porro quasi ratione facere accusantium obcaecati aliquam! Quod qui
+                quisquam
+                eos,
+                eaque, quia quos doloribus a architecto alias dicta inventore, pariatur sunt totam
+                beatae
+                cum
+                magnam explicabo reiciendis laborum accusantium aliquid. Natus voluptates voluptatum
+                expedita
+                necessitatibus fugiat quibusdam molestiae impedit fugit possimus, architecto non dolore
+                vero
+                consequuntur sed reiciendis veniam quod deleniti cupiditate unde facilis facere
+                assumenda
+                tempora? Quibusdam, corrupti excepturi vero impedit dolor aperiam debitis autem
+                inventore
+                vel
+                officia, cum, eius rem earum? Adipisci iste blanditiis, ex pariatur enim modi! Harum,
+                eos.
+                Impedit quia consectetur corporis adipisci dolores atque, eius nostrum, tempore odit ex
+                sed
+                sit,
+                inventore perferendis eveniet reiciendis soluta. A doloremque libero culpa optio odit
+                dolorem ea
+                veniam sapiente consectetur! Qui reprehenderit a, velit fugit deserunt error, itaque
+                adipisci
+                aut facere aliquid nihil? Reiciendis debitis accusamus quae animi esse maxime
+                dignissimos
+                necesperiores non quidem earum dolore quod sint
+                facilis
+                id, rem doloribus expedita magnam! Perferendis veniam nam nisi ipsam dignissimos maxime
+                amet
+                quam. Rerum voluptatum eaque sint placeat esse! Tenetur sapiente sint voluptate quis?
+            </p>
+            <div class="Caja">
+                <iframe class="Video" src="https://www.youtube.com/embed/a5bbZjFt9Bc" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
         </section>
 
@@ -247,36 +205,31 @@
         </Section>
 
         <!--    Seccion Proximas Competencias   -->
+        <div class="p">
+            <div class="CompetenciaLogos">
+                <img class="Logo2" src="./IMG/Logo1.png" alt="Logo2">
+                <h2 id="Proximas Competiciones" class="Competiciones display-2">Proximas Competencias</h2>
+            </div>
 
-        <div class="CompetenciaLogos">
-            <img class="Logo2" src="./IMG/Logo1.png" alt="Logo2">
-            <h2 class="Competiciones display-2">Proximas Competencias</h2>
-        </div>
+            <div class="ImgEvento">
+                <img src="./IMG/Competencia.jpg" alt="Competencias" title="Competencia XX/XX/XX">
+            </div>
 
-        <div class="ImgEvento">
-            <img src="./IMG/Banner.png" alt="Competencias" title="Competencia XX/XX/XX">
-        </div>
-
-        <div class="Evento  container">
-            <div class="row">
-                <div class="col">
-                    <p class="TextoEvento"> ipsum dolor sit amet consectetur adipisicing elit. Harum nostrum,
-                        perferendis
-                        corrupti animi dolorum id quod.<br> Optio perspiciatis eius cum distinctio ducimus dolores quasi
-                        debitis, quo deleniti molestiae harum rem <br> excepturi veniam aliquam necessitatibus
-                        voluptatem
-                        nobis praesentium omnis amet? Perspiciatis eligendi <br>illo assumenda fuga corporis vitae odit
-                        ullam illum earum.</p>
-                </div>
-                <div class="col">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6548.497774767478!2d-56.02567162278427!3d-34.84997307077502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f887d9dab0f47%3A0xf94995d6a0709785!2sLago%20Calcagno!5e0!3m2!1ses-419!2suy!4v1651121415217!5m2!1ses-419!2suy"
-                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+            <div class="Evento">
+                <p class="TextoEvento"> ipsum dolor sit amet consectetur adipisicing elit. Harum nostrum,
+                    perferendis
+                    corrupti animi dolorum id quod. Hola este es un texto de relleno Optio perspiciatis eius cum
+                    distinctio ducimus dolores quasi
+                    debitis, quo deleniti molestiae harum rem excepturi veniam aliquam necessitatibus
+                    voluptatem
+                    nobis praesentium omnis amet? Perspiciatis eligendiillo assumenda fuga corporis vitae odit
+                    ullam illum earum.</p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.1918532196037!2d-56.40022729515219!3d-34.447277472327656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1a575c9dc2071%3A0xf43f528921228bda!2sCLUB%20REMEROS%20CANARIOS!5e0!3m2!1ses-419!2suy!4v1654609262057!5m2!1ses-419!2suy"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-
         <!--    Seccion Atletas Uruguayos   -->
 
         <h2 id="Atletas Uruguayos">Atletas Uruguayos</h2>
@@ -327,6 +280,7 @@
         <div class="mas">
             <button type="button" class="btn btn-primary">Más</button>
         </div>
+        <br>
 
 
     </main>
