--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canotaje UY</title>
+    <meta name="keywords"
+        content="Canotaje, Remo, Deporte, Uruguay, Deportistas Uruguayos, Competencias Uruguay, Canotaje en Uruguay, Piragüismo, Atletas Uruguayos, Comprar Kayak,">
+    <meta name="description" content="En Canotaje Uy encontraras todo sobre el Canotaje en Uruguay!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles4.css">
@@ -332,10 +335,18 @@
         </div>
 
         <div class="SemiFinal">
-            <a href="./Pages/Política de cookies.html" target="blank">Política de cookies</a>
-            <a href="./Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
-            <a href="./Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
-            <a href="./Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
+            <button class="btn--Pcookies">
+                <a href="./Pages/Política de cookies.html" target="blank">Política de cookies</a>
+            </button>
+            <button class="btn--Acookies">
+                <a href="./Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
+            </button>
+            <button class="btn--Pprivacidad">
+                <a href="./Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
+            </button>
+            <button class="btn--Tservicios">
+                <a href="./Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
+            </button>
         </div>
 
 
