--- a/Pages/Competencias.html
+++ b/Pages/Competencias.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Competencias | Canotaje UY</title>
+    <meta name="keywords" content="Competencia, Competiciones, Competencias Uruguay, Competiciones en Uruguay, Carreras, Canotaje, K1, k2, k4, 1000 metros, 500 metros, 200 metros, velocidad, olimpiadas, campeones">
+    <meta name="description" content="Entérate de todas las competencias relacionadas al Canotaje tanto Nacional como internacional!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles4.css">
