--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto | Canotaje UY</title>
+    <meta name="keywords" content="Contacto, Contactanos">
+    <meta name="description" content="Contáctanos por cualquier problema o sugerencia!">
     <link rel="stylesheet" href="../css/styles4.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
