--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria | Canotaje UY</title>
+    <meta name="keywords" content="fotografias, fotografia, Galeria, Canotaje Uruguayo, Canotaje en Uruguay, Atletas Uruguayos">
+    <meta name="description" content="Colección de las mejores fotos del Canotaje Uruguayo!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles4.css">
