TERCERA ENTREGA DEL PROYECTO FINAL

--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/styles4.css">
 </head>
 
-<body>
+<body class="layout">
     <div class="grilla">
 
         <!--    Seccion  Titulo   -->
@@ -39,7 +39,7 @@
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navegacion navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,46 +76,48 @@
 
     </header>
 
+<main class="contenido">
 
     <!--    Galeria    -->
 
     <h2>¡Las mejores fotografias del deporte!</h2>
     <div class="imagenes">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="460" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
     </div>
     <!--    Seccion Final   -->
 
+</main>
     <footer class="footer">
 
         <section class="menuinferior">
