--- a/Pages/Tienda Oficiales.html
+++ b/Pages/Tienda Oficiales.html
@@ -13,7 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="layout">
     <div class="grilla">
 
         <!--    Seccion  Titulo   -->
@@ -39,7 +39,7 @@
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navegacion navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,9 +76,10 @@
 
     </header>
 
-
+<main class="contenido">
     <!--    Compra de Kayak en UY    -->
 
+    <div class="TiendaL">
     <h2 class="TituloTienda">¿Donde puedo conseguir un Kayak en Uruguay?</h2>
 
     <p class="TextoTienda">
@@ -92,7 +93,7 @@
             </div>
             <iframe class="MapaTienda"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.695305197595!2d-57.970212870598864!3d-31.367386321993813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95adc2de5b8d340b%3A0x29ce35eaa800c95!2sCam.%20del%20Exodo%202555%2C%2050000%20Salto%2C%20Departamento%20de%20Salto!5e0!3m2!1ses-419!2suy!4v1651203578392!5m2!1ses-419!2suy"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
@@ -105,6 +106,8 @@
         Otra alternativa es en los diversos grupos de Facebook y Marketplace.
     </p>
     <!--    Seccion Final   -->
+</div>
+</main>
 
     <footer class="footer">
 
