--- a/Pages/Competencias.html
+++ b/Pages/Competencias.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/styles4.css">
 </head>
 
-<body>
+<body class="layout">
     <div class="grilla">
 
         <!--    Seccion  Titulo   -->
@@ -39,7 +39,7 @@
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navegacion navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
