--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -13,7 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="layout">
     <div class="grilla">
 
         <!--    Seccion  Titulo   -->
@@ -39,7 +39,7 @@
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navegacion navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,9 +79,7 @@
 
     <!--    Formulario    -->
 
-
-
-
+<main class="contenido ContactoL">
 
     <label for="Usuario">
         <h3>¿Quien nos contacta?</h3>
@@ -89,13 +87,13 @@
 
     <form class="row g-3">
         <fieldset>
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
             </div>
 
             <br>
-            <textarea class="col-6" name="" id="" placeholder="Haganos saber el motivo de contacto" cols="20"
-                rows="7"></textarea>
+            <textarea class="col-12" name="" id="" placeholder="Haganos saber el motivo de contacto" cols="20"
+                rows="6"></textarea>
             <br>
 
             <div class="col-12">
@@ -113,6 +111,8 @@
     </fieldset>
 
     <br>
+
+</main>
 
     <!--    Seccion Final   -->
 
