--- a/Pages/Historia.html
+++ b/Pages/Historia.html
@@ -13,16 +13,17 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
-    <div class="grilla">
+<body class="layout">
+
 
         <!--    Seccion  Titulo   -->
 
-
+        <div>
         <header class="header">
             <div class="Logo">
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
                 <h1 class="display-1">Canotaje Uy</h1>
+
                 <ul class="Redes">
                     <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="../IMG/gorjeo.png" alt=""></a>
                     </li>
@@ -34,12 +35,12 @@
                                 alt="YouTube"></a>
                     </li>
                 </ul>
-            </div>
     </div>
+</div>
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navegaicion navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,7 +77,7 @@
 
     </header>
 
-    <main class="main">
+    <main class="contenido">
 
         <!--    El Piragüismo o Canotaje    -->
 
