--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
         <Section class="NovedadesB">
 
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+            <div class="Prueba row row-cols-1 row-cols-md-3 g-4">
+                <div class="col tamaño">
                     <div class="card h-100">
-                        <img src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
+                        <img   src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Noticia1</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
@@ -166,9 +166,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col tamaño">
                     <div class="card h-100">
-                        <img src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
+                        <img  src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Noticia2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col tamaño">
                     <div class="card h-100">
                         <img src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -214,8 +214,8 @@
                 <h2 id="Proximas Competiciones" class="Competiciones display-2">Proximas Competencias</h2>
             </div>
 
-            <div class="ImgEvento">
-                <img src="./IMG/Competencia.jpg" alt="Competencias" title="Competencia XX/XX/XX">
+            <div class="ImgEventoP">
+                <img class="ImgEvento" src="./IMG/Competencia.jpg" alt="Competencias" title="Competencia XX/XX/XX">
             </div>
 
             <div class="Evento">
@@ -229,7 +229,7 @@
                     ullam illum earum.</p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.1918532196037!2d-56.40022729515219!3d-34.447277472327656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1a575c9dc2071%3A0xf43f528921228bda!2sCLUB%20REMEROS%20CANARIOS!5e0!3m2!1ses-419!2suy!4v1654609262057!5m2!1ses-419!2suy"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
@@ -356,7 +356,6 @@
         </p>
     </footer>
 
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
