--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 quam. Rerum voluptatum eaque sint placeat esse! Tenetur sapiente sint voluptate quis?
             </p>
             <div class="Caja">
-                <iframe class="Video" src="https://www.youtube.com/embed/a5bbZjFt9Bc" title="YouTube video player"
-                    frameborder="0"
+                <iframe class="Video" width="100%" height="100%" src="https://www.youtube.com/embed/a5bbZjFt9Bc"
+                    title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
@@ -149,7 +149,7 @@
             <div class="Prueba row row-cols-1 row-cols-md-3 g-4">
                 <div class="col tamaño">
                     <div class="card h-100">
-                        <img   src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
+                        <img src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Noticia1</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col tamaño">
                     <div class="card h-100">
-                        <img  src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
+                        <img src="./IMG/Noticias.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Noticia2</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi
@@ -219,14 +219,9 @@
             </div>
 
             <div class="Evento">
-                <p class="TextoEvento"> ipsum dolor sit amet consectetur adipisicing elit. Harum nostrum,
-                    perferendis
-                    corrupti animi dolorum id quod. Hola este es un texto de relleno Optio perspiciatis eius cum
-                    distinctio ducimus dolores quasi
-                    debitis, quo deleniti molestiae harum rem excepturi veniam aliquam necessitatibus
-                    voluptatem
-                    nobis praesentium omnis amet? Perspiciatis eligendiillo assumenda fuga corporis vitae odit
-                    ullam illum earum.</p>
+                <p class="TextoEvento">Este sábado 4 de junio el Club Remeros Canarios de la ciudad de Santa Lucía,
+                    Canelones, recibe al primer Campeonato Nacional de Short Race! Habrán pruebas en todas las
+                    categorías desde las 9 de la mañana!</p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.1918532196037!2d-56.40022729515219!3d-34.447277472327656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1a575c9dc2071%3A0xf43f528921228bda!2sCLUB%20REMEROS%20CANARIOS!5e0!3m2!1ses-419!2suy!4v1654609262057!5m2!1ses-419!2suy"
                     width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
@@ -291,64 +286,64 @@
     <!--    Seccion Menu Inferior   -->
 
     <footer class="footer">
+        <div class="oculto">
+            <section class="menuinferior">
+                <div class="Inicio">
+                    <h3>Inicio</h3>
+                    <ul>
+                        <li><a href="#Novedades">Novedades</a></li>
+                        <li><a href="#Proximas Competiciones">Proximas Competiciones</a></li>
+                        <li><a href="#Atletas Uruguayos">Atletas Uruguayos</a></li>
+                    </ul>
+                </div>
 
-        <section class="menuinferior">
-            <div class="Inicio">
-                <h3>Inicio</h3>
-                <ul>
-                    <li><a href="#Novedades">Novedades</a></li>
-                    <li><a href="#Proximas Competiciones">Proximas Competiciones</a></li>
-                    <li><a href="#Atletas Uruguayos">Atletas Uruguayos</a></li>
-                </ul>
+                <div class="Competenciaas">
+                    <h3>Competencias</h3>
+
+                    <ul>
+                        <li><a href="./Pages/Competencias.html">Internacional</a></li>
+                        <li><a href="./Pages/Galeria.html" target="blank">Galeria</a></li>
+                        <li><a href="./Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
+                    </ul>
+                </div>
+
+                <div class="Contactoo">
+                    <h3>Contacto</h3>
+
+                    <ul>
+                        <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/">Facebook</a></li>
+                        <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
+                    </ul>
+                </div>
+            </section>
+            <!--    Seccion Final   -->
+
+
+
+            <div class="Disponible">
+                <img width="150" src="./IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
+                <span class="AppStore">
+                    <img width="150" src="./IMG/App Store.png" alt="App Store" title="Disponible en App Store">
+                </span>
             </div>
-
-            <div class="Competenciaas">
-                <h3>Competencias</h3>
-
-                <ul>
-                    <li><a href="./Pages/Competencias.html">Internacional</a></li>
-                    <li><a href="./Pages/Galeria.html" target="blank">Galeria</a></li>
-                    <li><a href="./Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
-                </ul>
-            </div>
-
-            <div class="Contactoo">
-                <h3>Contacto</h3>
-
-                <ul>
-                    <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/">Facebook</a></li>
-                    <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
-                </ul>
-            </div>
-        </section>
-        <!--    Seccion Final   -->
-
-
-
-        <div class="Disponible">
-            <img width="150" src="./IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
-            <span class="AppStore">
-                <img width="150" src="./IMG/App Store.png" alt="App Store" title="Disponible en App Store">
-            </span>
         </div>
 
-        <div class="SemiFinal">
-            <button class="btn--Pcookies">
-                <a href="./Pages/Política de cookies.html" target="blank">Política de cookies</a>
-            </button>
-            <button class="btn--Acookies">
-                <a href="./Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
-            </button>
-            <button class="btn--Pprivacidad">
-                <a href="./Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
-            </button>
-            <button class="btn--Tservicios">
-                <a href="./Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
-            </button>
-        </div>
-
+            <div class="SemiFinal">
+                <button class="btn--Pcookies">
+                    <a href="./Pages/Política de cookies.html" target="blank">Política de cookies</a>
+                </button>
+                <button class="btn--Acookies">
+                    <a href="./Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
+                </button>
+                <button class="btn--Pprivacidad">
+                    <a href="./Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
+                </button>
+                <button class="btn--Tservicios">
+                    <a href="./Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
+                </button>
+            </div>
 
 
         <p>
