Segunda modificacion pre entrega

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -79,85 +79,86 @@
 
     <!--    Formulario    -->
 
-<main class="contenido ContactoL">
+    <main class="contenido ContactoL">
 
-    <label for="Usuario">
-        <h3>¿Quien nos contacta?</h3>
-    </label>
+        <label for="Usuario">
+            <h3>¿Quien nos contacta?</h3>
+        </label>
 
-    <form class="row g-3">
-        <fieldset>
-            <div class="col-md-12">
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-            </div>
-
-            <br>
-            <textarea class="col-12" name="" id="" placeholder="Haganos saber el motivo de contacto" cols="20"
-                rows="6"></textarea>
-            <br>
-
-            <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                        Listo
-                    </label>
+        <form class="row g-3">
+            <fieldset>
+                <div class="col-md-12">
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                 </div>
-            </div>
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            </div>
-    </form>
-    </fieldset>
 
-    <br>
+                <br>
+                <textarea class="col-12" name="" id="" placeholder="Haganos saber el motivo de contacto" cols="20"
+                    rows="6"></textarea>
+                <br>
 
-</main>
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Listo
+                        </label>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+        </form>
+        </fieldset>
+
+        <br>
+
+    </main>
 
     <!--    Seccion Final   -->
 
     <footer class="footer">
+        <div class="oculto">
+            <section class="menuinferior">
+                <div class="Inicio">
+                    <h3>Inicio</h3>
+                    <ul>
+                        <li><a href="../index.html">Novedades</a></li>
+                        <li><a href="../index.html">Proximas Competiciones</a></li>
+                        <li><a href="../index.html">Atletas Uruguayos</a></li>
+                    </ul>
+                </div>
 
-        <section class="menuinferior">
-            <div class="Inicio">
-                <h3>Inicio</h3>
-                <ul>
-                    <li><a href="../index.html">Novedades</a></li>
-                    <li><a href="../index.html">Proximas Competiciones</a></li>
-                    <li><a href="../index.html">Atletas Uruguayos</a></li>
-                </ul>
+                <div class="Competenciaas">
+                    <h3>Competencias</h3>
+
+                    <ul>
+                        <li><a href="../Pages/Competencias.html">Internacional</a></li>
+                        <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
+                        <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
+                    </ul>
+                </div>
+
+                <div class="Contactoo">
+                    <h3>Contacto</h3>
+
+                    <ul>
+                        <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/">Facebook</a></li>
+                        <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
+                    </ul>
+                </div>
+            </section>
+            <!--    Seccion Final   -->
+
+
+
+            <div class="Disponible">
+                <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
+                <span class="AppStore">
+                    <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
+                </span>
             </div>
-
-            <div class="Competenciaas">
-                <h3>Competencias</h3>
-
-                <ul>
-                    <li><a href="../Pages/Competencias.html">Internacional</a></li>
-                    <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
-                    <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
-                </ul>
-            </div>
-
-            <div class="Contactoo">
-                <h3>Contacto</h3>
-
-                <ul>
-                    <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/">Facebook</a></li>
-                    <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
-                </ul>
-            </div>
-        </section>
-        <!--    Seccion Final   -->
-
-
-
-        <div class="Disponible">
-            <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
-            <span class="AppStore">
-                <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
-            </span>
         </div>
 
         <div class="SemiFinal">
@@ -166,8 +167,6 @@
             <a href="../Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
             <a href="../Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
         </div>
-
-
 
         <p>
             <h4>©Copyright 2050 de nadie. Todos los derechos revertidos.</h4>
