--- a/Pages/Tienda Oficiales.html
+++ b/Pages/Tienda Oficiales.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda Oficial | Canotaje UY</title>
-    <meta name="keywords" content="Compra de kayaks, Comprar Kayak, Canotaje, Deporte, Tienda, Tiendas Oficiales, Donde Comprar">
+    <meta name="keywords"
+        content="Compra de kayaks, Comprar Kayak, Canotaje, Deporte, Tienda, Tiendas Oficiales, Donde Comprar">
     <meta name="description" content="Infórmate de donde puedes conseguir tu kayak ideal">
     <link rel="stylesheet" href="../css/styles4.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -76,81 +77,84 @@
 
     </header>
 
-<main class="contenido">
-    <!--    Compra de Kayak en UY    -->
+    <main class="contenido">
+        <!--    Compra de Kayak en UY    -->
 
-    <div class="TiendaL">
-    <h2 class="TituloTienda">¿Donde puedo conseguir un Kayak en Uruguay?</h2>
+        <div class="TiendaL">
+            <h2 class="TituloTienda">¿Donde puedo conseguir un Kayak en Uruguay?</h2>
+            <div class="tienda">
+                <p class="TextoTienda">
+                    Actualmente solo hay una tienda oficial donde encontrar Kayak inportados de Europa y es la tienda de
+                    Sioox
+                    ubicada en Salto Uruguay.
+                </p>
 
-    <p class="TextoTienda">
-        Actualmente solo hay una tienda oficial donde encontrar Kayak inportados de Europa y es la tienda de Sioox
-        ubicada en Salto Uruguay.
-    </p>
-    <div class="tienda">
-        <div>
-            <div class="ImgTienda">
-                <img src="../IMG/Sioox.png" alt="Sioox Logo">
+                <div>
+                    <div class="ImgTienda">
+                        <img src="../IMG/Sioox.png" alt="Sioox Logo">
+                    </div>
+                    <iframe class="MapaTienda"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.695305197595!2d-57.970212870598864!3d-31.367386321993813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95adc2de5b8d340b%3A0x29ce35eaa800c95!2sCam.%20del%20Exodo%202555%2C%2050000%20Salto%2C%20Departamento%20de%20Salto!5e0!3m2!1ses-419!2suy!4v1651203578392!5m2!1ses-419!2suy"
+                        width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+                <div>
+                    <a href="http://www.nelo.eu/product/k1-cinco/?size=m"><img class="Nelo5" src="../IMG/Nelo1.png"
+                            alt="Nelo5"></a>
+                </div>
+
+                <p class="TextoT">
+                    Otra alternativa es en los diversos grupos de Facebook y Marketplace.
+                </p>
             </div>
-            <iframe class="MapaTienda"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.695305197595!2d-57.970212870598864!3d-31.367386321993813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95adc2de5b8d340b%3A0x29ce35eaa800c95!2sCam.%20del%20Exodo%202555%2C%2050000%20Salto%2C%20Departamento%20de%20Salto!5e0!3m2!1ses-419!2suy!4v1651203578392!5m2!1ses-419!2suy"
-                width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!--    Seccion Final   -->
         </div>
-
-        <div>
-            <a href="http://www.nelo.eu/product/k1-cinco/?size=m"><img class="Nelo5" src="../IMG/Nelo1.png"
-                    alt="Nelo5"></a>
-        </div>
-    </div>
-    <p class="TextoT">
-        Otra alternativa es en los diversos grupos de Facebook y Marketplace.
-    </p>
-    <!--    Seccion Final   -->
-</div>
-</main>
+    </main>
 
     <footer class="footer">
+        <div class="oculto">
+            <section class="menuinferior">
+                <div class="Inicio">
+                    <h3>Inicio</h3>
+                    <ul>
+                        <li><a href="../index.html">Novedades</a></li>
+                        <li><a href="../index.html">Proximas Competiciones</a></li>
+                        <li><a href="../index.html">Atletas Uruguayos</a></li>
+                    </ul>
+                </div>
 
-        <section class="menuinferior">
-            <div class="Inicio">
-                <h3>Inicio</h3>
-                <ul>
-                    <li><a href="../index.html">Novedades</a></li>
-                    <li><a href="../index.html">Proximas Competiciones</a></li>
-                    <li><a href="../index.html">Atletas Uruguayos</a></li>
-                </ul>
+                <div class="Competenciaas">
+                    <h3>Competencias</h3>
+
+                    <ul>
+                        <li><a href="../Pages/Competencias.html">Internacional</a></li>
+                        <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
+                        <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
+                    </ul>
+                </div>
+
+                <div class="Contactoo">
+                    <h3>Contacto</h3>
+
+                    <ul>
+                        <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/">Facebook</a></li>
+                        <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
+                    </ul>
+                </div>
+            </section>
+            <!--    Seccion Final   -->
+
+
+
+            <div class="Disponible">
+                <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
+                <span class="AppStore">
+                    <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
+                </span>
             </div>
-
-            <div class="Competenciaas">
-                <h3>Competencias</h3>
-
-                <ul>
-                    <li><a href="../Pages/Competencias.html">Internacional</a></li>
-                    <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
-                    <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
-                </ul>
-            </div>
-
-            <div class="Contactoo">
-                <h3>Contacto</h3>
-
-                <ul>
-                    <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/">Facebook</a></li>
-                    <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
-                </ul>
-            </div>
-        </section>
-        <!--    Seccion Final   -->
-
-
-
-        <div class="Disponible">
-            <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
-            <span class="AppStore">
-                <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
-            </span>
         </div>
 
         <div class="SemiFinal">
