--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria | Canotaje UY</title>
-    <meta name="keywords" content="fotografias, fotografia, Galeria, Canotaje Uruguayo, Canotaje en Uruguay, Atletas Uruguayos">
+    <meta name="keywords"
+        content="fotografias, fotografia, Galeria, Canotaje Uruguayo, Canotaje en Uruguay, Atletas Uruguayos">
     <meta name="description" content="Colección de las mejores fotos del Canotaje Uruguayo!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -76,92 +77,93 @@
 
     </header>
 
-<main class="contenido">
+    <main class="contenido">
 
-    <!--    Galeria    -->
+        <!--    Galeria    -->
 
-    <h2>¡Las mejores fotografias del deporte!</h2>
-    <div class="imagenes">
-        
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-        <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
-    </div>
-    <!--    Seccion Final   -->
+        <h2>¡Las mejores fotografias del deporte!</h2>
+        <div class="imagenes">
 
-</main>
-    <footer class="footer">
-
-        <section class="menuinferior">
-            <div class="Inicio">
-                <h3>Inicio</h3>
-                <ul>
-                    <li><a href="../index.html">Novedades</a></li>
-                    <li><a href="../index.html">Proximas Competiciones</a></li>
-                    <li><a href="../index.html">Atletas Uruguayos</a></li>
-                </ul>
-            </div>
-
-            <div class="Competenciaas">
-                <h3>Competencias</h3>
-
-                <ul>
-                    <li><a href="../Pages/Competencias.html">Internacional</a></li>
-                    <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
-                    <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
-                </ul>
-            </div>
-
-            <div class="Contactoo">
-                <h3>Contacto</h3>
-
-                <ul>
-                    <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/">Facebook</a></li>
-                    <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
-                </ul>
-            </div>
-        </section>
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+            <img width="360" src="..//IMG/Ejemplo-de-Galeria.png" alt="Galeria">
+        </div>
         <!--    Seccion Final   -->
 
+    </main>
+    <footer class="footer">
+        <div class="oculto">
+            <section class="menuinferior">
+                <div class="Inicio">
+                    <h3>Inicio</h3>
+                    <ul>
+                        <li><a href="../index.html">Novedades</a></li>
+                        <li><a href="../index.html">Proximas Competiciones</a></li>
+                        <li><a href="../index.html">Atletas Uruguayos</a></li>
+                    </ul>
+                </div>
+
+                <div class="Competenciaas">
+                    <h3>Competencias</h3>
+
+                    <ul>
+                        <li><a href="../Pages/Competencias.html">Internacional</a></li>
+                        <li><a href="../Pages/Galeria.html" target="blank">Galeria</a></li>
+                        <li><a href="../Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
+                    </ul>
+                </div>
+
+                <div class="Contactoo">
+                    <h3>Contacto</h3>
+
+                    <ul>
+                        <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/">Facebook</a></li>
+                        <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
+                    </ul>
+                </div>
+            </section>
+            <!--    Seccion Final   -->
 
 
-        <div class="Disponible">
-            <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
-            <span class="AppStore">
-                <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
-            </span>
+
+            <div class="Disponible">
+                <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
+                <span class="AppStore">
+                    <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
+                </span>
+            </div>
         </div>
-
+        
         <div class="SemiFinal">
             <a href="../Pages/Política de cookies.html" target="blank">Política de cookies</a>
             <a href="../Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
