--- a/Pages/Historia.html
+++ b/Pages/Historia.html
@@ -16,9 +16,9 @@
 <body class="layout">
 
 
-        <!--    Seccion  Titulo   -->
+    <!--    Seccion  Titulo   -->
 
-        <div>
+    <div>
         <header class="header">
             <div class="Logo">
                 <img width="10%" src="../IMG/Logo1.png" alt="LOGO">
@@ -35,8 +35,8 @@
                                 alt="YouTube"></a>
                     </li>
                 </ul>
+            </div>
     </div>
-</div>
 
 
 
@@ -225,49 +225,50 @@
     <!--    Seccion Final   -->
 
     <footer class="footer">
+        <div class="oculto">
+            <section class="menuinferior">
+                <div class="Inicio">
+                    <h3>Inicio</h3>
+                    <ul>
+                        <li><a href="../index.html">Novedades</a></li>
+                        <li><a href="../index.html">Proximas Competiciones</a></li>
+                        <li><a href="../index.html">Atletas Uruguayos</a></li>
+                    </ul>
+                </div>
 
-        <section class="menuinferior">
-            <div class="Inicio">
-                <h3>Inicio</h3>
-                <ul>
-                    <li><a href="../index.html">Novedades</a></li>
-                    <li><a href="../index.html">Proximas Competiciones</a></li>
-                    <li><a href="../index.html">Atletas Uruguayos</a></li>
-                </ul>
+                <div class="Competenciaas">
+                    <h3>Competencias</h3>
+
+                    <ul>
+                        <li><a href="./Pages/Competencias.html">Internacional</a></li>
+                        <li><a href="./Pages/Galeria.html" target="blank">Galeria</a></li>
+                        <li><a href="./Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
+                    </ul>
+                </div>
+
+                <div class="Contactoo">
+                    <h3>Contacto</h3>
+
+                    <ul>
+                        <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/">Facebook</a></li>
+                        <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
+                    </ul>
+                </div>
+            </section>
+            <!--    Seccion Final   -->
+
+
+
+            <div class="Disponible">
+                <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
+                <span class="AppStore">
+                    <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
+                </span>
             </div>
-
-            <div class="Competenciaas">
-                <h3>Competencias</h3>
-
-                <ul>
-                    <li><a href="./Pages/Competencias.html">Internacional</a></li>
-                    <li><a href="./Pages/Galeria.html" target="blank">Galeria</a></li>
-                    <li><a href="./Pages/Tienda Oficiales.html">Tienda Oficiales</a></li>
-                </ul>
-            </div>
-
-            <div class="Contactoo">
-                <h3>Contacto</h3>
-
-                <ul>
-                    <li><a href="https://twitter.com/?lang=es">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/">Facebook</a></li>
-                    <li><a href="https://www.google.com/intl/es/gmail/about/">Gmail</a></li>
-                </ul>
-            </div>
-        </section>
-        <!--    Seccion Final   -->
-
-
-
-        <div class="Disponible">
-            <img width="150" src="../IMG/Google Play.png" alt="Google Play" title="Disponible en Google Play">
-            <span class="AppStore">
-                <img width="150" src="../IMG/App Store.png" alt="App Store" title="Disponible en App Store">
-            </span>
         </div>
-
+        
         <div class="SemiFinal">
             <a href="../Pages/Política de cookies.html" target="blank">Política de cookies</a>
             <a href="../Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
