--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="header">
             <div class="Logo ">
                 <img class="img-fluid" width="10%" src="./IMG/Logo1.png" alt="LOGO">
-                <h1 class="display-1">Canotaje Uy</h1>
+                <h1 class="display-2">Canotaje Uy</h1>
                 <ul class="Redes">
                     <li><a href="https://twitter.com/?lang=es"><img class="Icono" src="./IMG/gorjeo.png" alt=""></a>
                     </li>
@@ -214,18 +214,21 @@
                 <h2 id="Proximas Competiciones" class="Competiciones display-2">Proximas Competencias</h2>
             </div>
 
-            <div class="ImgEventoP">
-                <img class="ImgEvento" src="./IMG/Competencia.jpg" alt="Competencias" title="Competencia XX/XX/XX">
-            </div>
+
+
+
 
             <div class="Evento">
+                <img class="ImgEvento" src="./IMG/Competencia.jpg" alt="Competencias" title="Competencia XX/XX/XX">
                 <p class="TextoEvento">Este sábado 4 de junio el Club Remeros Canarios de la ciudad de Santa Lucía,
                     Canelones, recibe al primer Campeonato Nacional de Short Race! Habrán pruebas en todas las
                     categorías desde las 9 de la mañana!</p>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.1918532196037!2d-56.40022729515219!3d-34.447277472327656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1a575c9dc2071%3A0xf43f528921228bda!2sCLUB%20REMEROS%20CANARIOS!5e0!3m2!1ses-419!2suy!4v1654609262057!5m2!1ses-419!2suy"
-                    width="360" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="mapaindex">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.1918532196037!2d-56.40022729515219!3d-34.447277472327656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1a575c9dc2071%3A0xf43f528921228bda!2sCLUB%20REMEROS%20CANARIOS!5e0!3m2!1ses-419!2suy!4v1654609262057!5m2!1ses-419!2suy"
+                        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
         <!--    Seccion Atletas Uruguayos   -->
@@ -330,20 +333,21 @@
             </div>
         </div>
 
-            <div class="SemiFinal">
-                <button class="btn--Pcookies">
-                    <a href="./Pages/Política de cookies.html" target="blank">Política de cookies</a>
-                </button>
-                <button class="btn--Acookies">
-                    <a href="./Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
-                </button>
-                <button class="btn--Pprivacidad">
-                    <a href="./Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
-                </button>
-                <button class="btn--Tservicios">
-                    <a href="./Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
-                </button>
-            </div>
+
+        <div class="SemiFinal">
+            <button class="btn--Pcookies">
+                <a href="./Pages/Política de cookies.html" target="blank">Política de cookies</a>
+            </button>
+            <button class="btn--Acookies">
+                <a href="./Pages/Ajustes de cookies.html" target="blank">Ajustes de cookies</a>
+            </button>
+            <button class="btn--Pprivacidad">
+                <a href="./Pages/Política de privacidad.html" target="blank">Política de privacidad</a>
+            </button>
+            <button class="btn--Tservicios">
+                <a href="./Pages/Términos de servicios.html" target="blank">Terminos de servicios</a>
+            </button>
+        </div>
 
 
         <p>
